--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <title>Sage's Hello World 2025</title>  
 </head>
 <body>
-Hello World! <br/>
+<h2>Hello World!<h2> <br/>
 <br/>
   I made a change!
 </body>
   </html>
- 
