--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 <h3>Hello World!<h3> <br/>
 <br/>
-  <code style="color : green">I made a change!/code>
+  <code style="color : green">/code> I made a change!
 </body>
   </html>
