--- a/index.html
+++ b/index.html
@@ -9,4 +9,14 @@
 </body>
   </html>
 <img src="Apple.webp">
-<mystle.css>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
+<body>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
