--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <body>
 <h1>Green<h1> <br/>
 <br/>
-<style>{ background-color: yellowgreen; }<style>
+<style>{ background-color: yellowgreen; }/style>
