--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <head>
 <title>Green</title>  
 </head>
-<body>
-<h1>Green<h1> <br/>
-<br/>
-<style>{ background-color: yellowgreen; }/style>
+
+<html>
+<head>
+    <title>Background Change</title>
+</head>
+<body bgcolor="lightgreen">
+    <h1>
+        Hello! Welcome to my website about the color green.
+    </h1>
+</body>
+</html>
