--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body bgcolor="lightgreen">
     <h1>
-        Hello! Welcome to my website about the color green.
+        Hello! Welcome to my website dedicated entirely to the color green.
     </h1>
 </body>
 </html>
