--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <title>Background Change</title>
 </head>
-<body bgcolor="lightgreen">
+<body bgcolor="green">
     <h1>
         Hello! Welcome to my website dedicated entirely to the color green.
     </h1>
