--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Background Change</title>
 </head>
 <body bgcolor="forestgreen">
-    <h1>Hello! Welcome to my website dedicated entirely to the color green./<h1>
+    <h1>Hello! Welcome to my website dedicated entirely to the color green.<h1>
     
 <h1 {
         color: greenyellow;
