--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <title>Background Change</title>
 </head>
 <body bgcolor="forestgreen">
-    <h1>Hello! Welcome to my website dedicated entirely to the color green.<h1>
+    <p style="color:yellowgreen;"> Hello! Welcome to my website dedicated entirely to the color green.p>
     
-<h1 {
-        color: greenyellow;
-        }
-
         
 </body> 
 }</html>
