--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Background Change</title>
 </head>
 <body bgcolor="forestgreen">
-    <p style="color:yellowgreen;">Hello! Welcome to my website dedicated entirely to the color green.</p>
+    <h1 style="color:yellowgreen;">Hello! Welcome to my website dedicated entirely to the color green</h1>
     
         
 </body> 
